# recodai-luc-sifd-4th-place-solution

./: .gitignore  Dockerfile  README.md  WRITEUP.md  environment.yml  pyproject.toml  requirements-freeze.txt  requirements.txt
modules/copy-move-det-keypoint/: Dockerfile  NOTICE.md  README.md  pyproject.toml  requirements.txt
modules/copy-move-det-keypoint/docs/: PYTHON_API.md
modules/copy-move-det-keypoint/legacy_v1/: README_LEGACY_V1.txt
modules/copy-move-det-keypoint/legacy_v1/copy_move_det_keypoint/: clustering.py  detector.py  feature_extraction.py  matching.py  run_detection.py
modules/copy-move-det-keypoint/src/copy_move_det_keypoint/: __init__.py  api.py  detector.py  feature_extraction.py  matching.py  run_detection.py  visualization.py
modules/figure-panel-detection/: .gitignore  LICENSE.txt  NOTICE.md  README.md  pyproject.toml  pytest.ini  requirements-cpu.txt  requirements-dev.txt
modules/figure-panel-detection/resources/models/yolov5-onnx/: README.md  model_4_class.json  model_5_class.json
modules/figure-panel-detection/scripts/: panel_detect.py
modules/figure-panel-detection/src/figure_panel_detection/: __init__.py
modules/figure-panel-detection/src/figure_panel_detection/api/: __init__.py  detector.py  geometry.py  image_io.py  postprocess.py  tiling.py  types.py
modules/figure-panel-detection/src/figure_panel_detection/cli/: panel_detect.py
modules/figure-panel-detection/src/figure_panel_detection/converters/: yolo_to_labelme.py
modules/figure-panel-detection/src/figure_panel_detection/core/: layout.py  types.py
modules/figure-panel-detection/src/figure_panel_detection/cropping/: __init__.py  crop_regions.py
modules/figure-panel-detection/src/figure_panel_detection/filtering/: buckets.py  dedup.py  keep_classes.py
modules/figure-panel-detection/src/figure_panel_detection/io/: discover.py  writers.py
modules/figure-panel-detection/src/figure_panel_detection/pipeline/: panel_detector.py
modules/figure-panel-detection/src/figure_panel_detection/viz/: __init__.py  notebook.py  render.py
modules/figure-panel-detection/src/figure_panel_detection/yolo/: nms.py  onnx_predictor.py  postprocess.py  preprocess.py
modules/figure-panel-detection/tests/: README.md  conftest.py  test_api_smoke_dummy.py  test_environment_ready.py  test_integration_real_model.py  test_optional_api_futureproof.py
modules/figure-panel-detection/tools/: pmc_kaggle_prepare_upload.py  pmc_oa_dataset_builder.py
modules/panel-annotation-seg/: README.md  requirements.txt  synthetic_overlay_dataset.py  training-panel-anno-seg-kerasv3-v2.ipynb  viz_synth_overlay_dataset.py
modules/panel-cbir/: .gitignore  README.md  pyproject.toml  requirements-cpu.txt
modules/panel-cbir/configs/: eval_models.py
modules/panel-cbir/resources/images/blots/: 02600.tiff  02602.tif  02606.tif  02612.tif
modules/panel-cbir/src/panel_cbir/: __init__.py  cli.py  config.py  embedders.py  engine.py  index.py  types.py  utils.py
modules/panel-cbir/tools/: eval_cbir_aug_models.py  make_cbir_aug_positives.py  panel_cbir_legacy.py
modules/panel-content-seg/: README.md  requirements.txt  training-panel-content-seg-v1.ipynb
modules/panel-reuse-detection/: README.md  cmd.md  panel-reuse-det-iim-matcher-benchmark-v1.ipynb  requirements.txt
modules/panel-type-classifier/: README.md  pyproject.toml  requirements.txt
modules/panel-type-classifier/notebooks/: panel-type-cls-biomedclip-v1.ipynb  panel-type-cls-medgamma-4b-it.ipynb
modules/panel-type-classifier/panel_type_classifier/: __init__.py  classifier.py  folder.py  io_utils.py  prompts.py  types.py  viz.py
modules/panel-type-classifier/scripts/: classify_folder.py
scripts/: dev_install.sh  main_runner.py
tools/: bench_interpanel.py  export_panel_region_reuse_task_datasets.py  kaggle_bootstrap_paths.py  make_panel_region_reuse_dataset.py
tools/border/: image_border_detection.py
tools/converters/: extract_npy_masks.py  mask_npy_to_png.py  rsiid_to_panel_detection_yolo.py
tools/json/: beautify_json_recursive.py
(+39 files in other folders)
