[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copy-move-det-keypoint"
version = "0.1.0"
description = "Copy move detection keypoint based"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.7",
  "onnxruntime>=1.15",
  "tqdm>=4.66",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
