[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figure-panel-detection"
version = "0.1.0"
description = "Figure panel detection utilities with YOLOv5 ONNX inference."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.7",
  "onnxruntime>=1.15",
  "tqdm>=4.66",
]

[project.scripts]
panel-detect = "figure_panel_detection.cli.panel_detect:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
